--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indieflix</title>
+    <title>Indiflix</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
         <div class="right">
             <input type="text" placeholder="Search here">
             <button class="search"><img src="search.png" alt=""></button>
-            <button class="btn">Login</button>
+            <a href="login\index.html"><button class="btn" >Login</button></a>
         </div>
     </header>
     
