--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="right">
             <input type="text" placeholder="Search here">
             <button class="search"><img src="search.png" alt=""></button>
-            <a href="login\index.html"><button class="btn" >Login</button></a>
+            <a href="login/index.html"><button class="btn" >Login</button></a>
         </div>
     </header>
     
