--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indiflix</title>
+    <title>Indieflix</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="header">
         <div class="left">
-            <img src="logo.png" alt="" id="logo">
+          <h1>Indieflix</h1>
         </div>
         <div class="mid">
             <ul class="navbar">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Movies</a></li>
-                <li><a href="#">Series</a></li>
-                <li><a href="#">Anime</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="movies.html">Movies</a></li>
+                <li><a href="series.html">Series</a></li>
+                <li><a href="anime.html">Anime</a></li>
             </ul>
         </div>
+        <br><br>
         <div class="right">
             <input type="text" placeholder="Search here">
-            <button class="search"><img src="search.png" alt=""></button>
-            <a href="login/index.html"><button class="btn" >Login</button></a>
+          
+            <button class="btn">Login</button>
         </div>
     </header>
-    
+
 </body>
 </html>
