--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="right">
             <input type="text" placeholder="Search here">
           
-            <button class="btn">Login</button>
+            <a href="login\index.html"> <button class="btn">Login</button></a>
         </div>
     </header>
     
